# QCortado

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: windows-build.yml
docs/: BAND_STRUCTURE_WIZARD_PLAN.md
notes/: PHONON_RECOVERY_EPW_FINDINGS_2026-02-12.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  process_manager.rs  projects.rs  symmetry.rs
src-tauri/src/hpc/: credentials.rs  mod.rs  profile.rs  runner.rs  slurm.rs  ssh.rs  sync.rs
src-tauri/src/qe/: bands.rs  input.rs  mod.rs  output.rs  phonon.rs  runner.rs  types.rs
src/components/: BandPlot.tsx  BandStructureWizard.tsx  BrillouinZoneViewer.tsx  CreateProjectDialog.tsx  EditProjectDialog.tsx  ElapsedTimer.tsx  ElectronicDOSPlot.tsx  ElectronicDOSWizard.tsx  EstimatedRemainingTime.tsx  FermiSurfaceWizard.tsx  HpcActivityPanel.tsx  HpcRunSettings.tsx  HpcSetupWizard.tsx  PhononPlot.tsx  PhononWizard.tsx  ProcessIndicator.tsx  ProgressBar.tsx  ProjectBrowser.tsx  ProjectDashboard.tsx  ProjectView.tsx  SCFWizard.tsx  SaveToProjectDialog.tsx  TaskQueuePage.tsx  UnitCellViewer.tsx
src/lib/: TaskContext.tsx  ThemeContext.tsx  brillouinZone.ts  brillouinZoneData.ts  brillouinZoneFixtures.ts  cifParser.ts  hpcConfig.ts  kPathTransforms.ts  kpaths.ts  mpiDefaults.ts  optimizedStructure.ts  phononReady.ts  primitiveCell.ts  qeProgress.ts  reciprocalLattice.ts  saveSizeMode.ts  scfSorting.ts  symmetry.ts  symmetryTransform.ts  types.ts  (+1 more)
