[package]
name = "qcortado"
version = "0.1.0"
description = "A modern UI for Quantum ESPRESSO"
authors = ["Jake Scally"]
edition = "2021"

[lib]
name = "qcortado_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync"] }
thiserror = "1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
flate2 = "1"
spglib-sys = "1.16.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
